# jl-engine-vrp

./: .dockerignore  .env.example  .gitignore  .mcp.json  ABOUT_AGENT.md  AGENTS.md  AGENT_HANDOFF.md  AGENT_PROFILE.md  CondaPkg.toml  Dockerfile  FRESH_COPY_NOTES.md  NOTICE.md  PRIVACY.md  Preview_Detailed.html  Preview_Sign.html  Project.toml  README.md  RENAME_NOTES.md  a2a_billing.jl  a2a_server.jl  azure.yaml  blueprint.html  card_cruncher.jl  chat.jl  compose.yaml  feed_julian.py  gemini_assistant.jl  health_check.jl  index.html  jl_engine_landing.html  julian_hunt_loop.py  reality_log.txt  requirements.txt  riff.jl  run_oracle_test.bat  scrape_clawhub.py  sparkbyte.jl  sparkbyte.json  start_agentverse.bat  start_dashboard.bat  (+3 more)
JulianMetaMorph/JulianMetaMorph/: Launch_Julian_MetaMorph.bat  Launch_Julian_MetaMorph.ps1  README.md  ingest_fuchsia_tools.py  ingest_sdk.py  ingest_sdk_full.py  peek_quarry.py  pyproject.toml
JulianMetaMorph/JulianMetaMorph/data/: splash_garden_demo.json  splash_garden_demo.ppm  splash_garden_demo_delay.pgm
JulianMetaMorph/JulianMetaMorph/data/splash_garden_bench_demo/: index.html  unseen-vision-balanced-field.json  unseen-vision-bench.json  unseen-vision-delay-oracle.json  unseen-vision-spectral-echo.json  unseen-vision-structure-lock.json
JulianMetaMorph/JulianMetaMorph/src/julian_metamorph.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  (+2 more)
JulianMetaMorph/JulianMetaMorph/static/: launcher.html  ripple_scope.html
JulianMetaMorph/JulianMetaMorph/tests/: conftest.py  test_julian_metamorph.py  test_service.py  test_splash_garden.py
(+216 files in other folders)
