[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "julian-metamorph"
version = "0.1.0"
description = "A standalone GitHub quarry and skill-forging engine for Julian MetaMorph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "requests>=2.31.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
julian-metamorph = "julian_metamorph.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
